# clvr-api

./: .env.example  Cargo.toml  log4rs.yml
abis/: ClvrHook.json
src/: executor.rs  main.rs
src/clvr/: algorithm.rs  algorithm_tests.rs  mod.rs
src/clvr/model/: clvr_model.rs  mod.rs
src/pool_fetcher/: mod.rs  v3.rs
src/scheduler/: hook.rs  mod.rs
src/server/: eip2612.rs  eip2612_tests.rs  handlers.rs  mod.rs  swap_router_v3.rs  tokens.rs
src/server/handlers_types/: mod.rs
src/trades/: implementation.rs  mod.rs
