[package]
name = "clvr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
alloy = { version = "0.6.2", features = ["full"] }
crossbeam = "0.8.4"
diesel = "2.2.4"
dotenv = "0.15.0"
eyre = "0.6.12"
log = "0.4.22"
log4rs = "1.3.0"
once_cell = "1.20.2"
rug = "1.26.1"
serde = "1.0.215"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread"] }
uniswap-sdk-core = "3.2.0"
uniswap-v3-sdk = { version = "2.6.0", features = ["extensions"] }
warp = "0.3.7"
